# UP-CrackNet

./: .gitignore  classification_results.csv  classifier.py  dataset.py  dataset_test.py  main.py  model.py  pyproject.toml  report.md  results.csv  test.py  test_generator.py  train.py  train_classifier.py  train_generator.py  visualize_results.py
ck_mask/: ck_0.npy  ck_1.npy  ck_2.npy  ck_3.npy  ck_4.npy  ck_5.npy  ck_6.npy  ck_7.npy
datasets/: dataset.py  dataset_test.py
models/: model.py  model_classifier.py
path/G_D_448_ngf_64_ndf_64/: events.out.tfevents.1762292695.rybijakStationary.8746.0  events.out.tfevents.1762292976.rybijakStationary.9894.0  events.out.tfevents.1762293324.rybijakStationary.11100.0  events.out.tfevents.1762697484.rybijakStationary.4184.0  events.out.tfevents.1762697777.rybijakStationary.4701.0  events.out.tfevents.1762698214.rybijakStationary.5527.0  events.out.tfevents.1762700240.rybijakStationary.8071.0  events.out.tfevents.1762732340.rybijakStationary.1326.0  events.out.tfevents.1762732405.rybijakStationary.1467.0  events.out.tfevents.1762732799.rybijakStationary.1802.0  events.out.tfevents.1762734222.rybijakStationary.1729.0  events.out.tfevents.1762734291.rybijakStationary.2220.0  events.out.tfevents.1762734448.rybijakStationary.2938.0
path/log1/: events.out.tfevents.1762292480.rybijakStationary.8153.0  events.out.tfevents.1762292574.rybijakStationary.8401.0  (+6 more)
scripts/: calculate_errors.py  checkboard_augmentation.py  generate_masks.py  get_mean_std_dev.py  img_binarization.py  run_tests.sh  segregate_files.py
utils/: logger.py
(+35 files in other folders)
